[package]
name = "mmtk_ruby"
version = "0.1.0"
authors = [
    "Kunshan Wang <wks1986@gmail.com>",
    "Angus Atkinson <4848802+angussidney@users.noreply.github.com>",
    ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Metadata for the Ruby repository
[package.metadata.ci-repos.ruby]
repo = "mmtk/ruby" # This is used by actions/checkout, so the format is "owner/repo", not URL.
rev = "4d7e5e50760cfe99c4013a3d841379f0bc24283f"

[lib]
name = "mmtk_ruby"
# be careful - Link-Time Optimisation (LTO) is only allowed for certain crate types
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true

[dependencies]
# Definitions for interoperating with C code on the ruby side
libc = "0.2"
lazy_static = "1.1"
log = "0.4.14"
env_logger = "0.11.3"
once_cell = "1.17.0"
atomic_refcell = "0.1.9"
probe = "0.5"

[dependencies.mmtk]
features = ["is_mmtk_object", "object_pinning"]

# Uncomment the following lines to use mmtk-core from the official repository.
git = "https://github.com/mmtk/mmtk-core.git"
rev = "a9b619a4ee18a4f83209f930f8c48a3b63ee478c"

# Uncomment the following line to use mmtk-core from a local repository.
# path = "../../mmtk-core"

[features]
default = []

# When moving an object, clear its original copy.
clear_old_copy = []
