[package]
name = "mmtk_ruby"
version = "0.1.0"
authors = [
    "Kunshan Wang <wks1986@gmail.com>",
    "Angus Atkinson <4848802+angussidney@users.noreply.github.com>",
    ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Metadata for the Ruby repository
[package.metadata.ci-repos.ruby]
repo = "mmtk/ruby" # This is used by actions/checkout, so the format is "owner/repo", not URL.
rev = "abce8f049f6eb231f8a605d576a16e1fff8ae86f"

[lib]
name = "mmtk_ruby"
# be careful - Link-Time Optimisation (LTO) is only allowed for certain crate types
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true

[dependencies]
# Definitions for interoperating with C code on the ruby side
libc = "0.2"
lazy_static = "1.1"
log = "0.4.14"
env_logger = "0.11.3"
once_cell = "1.17.0"
atomic_refcell = "0.1.9"
probe = "0.5"

[dependencies.mmtk]
features = ["is_mmtk_object", "object_pinning", "sticky_immix_non_moving_nursery"]

# Uncomment the following lines to use mmtk-core from the official repository.
git = "https://github.com/mmtk/mmtk-core.git"
rev = "ac80c8de8ac551959839dfaa79e87c1a05a9e89c"

# Uncomment the following line to use mmtk-core from a local repository.
#path = "../../mmtk-core"

[features]
default = []

# When moving an object, clear its original copy.
clear_old_copy = []

# Enable extra assertions in release build.  For debugging.
extra_assert = []

# Force Immix-based plans to move as many objects as possible.  For debugging.
immix_stress_copying = ["mmtk/immix_stress_copying"]
